<resources>
    <string name="app_author">Kaitlyn Gatineau &amp; Trevor Carson</string>
    <string name="app_name">BBC RSS News Feed</string>
    <string name="app_titleScreen">BBC News Reader</string>
    <string name="rss_reader_text">RSS Reader</string>
    <string name="open_feed_text">Open Feed</string>
    <string name="feed_name_hint">RSS Feed Name</string>
    <string name="feed_address_hint">RSS Feed Address</string>
    <string name="add_feed_text">Add Feed</string>
    <string name="view_feed_text">View Feed</string>
    <string name="rss_title_text">Title RSS Feed</string>
    <string name="rss_url_text">www.rss.feed.com</string>
    <string name="row_title_text">Title Text View</string>
    <string name="row_article_text">--Article Description--</string>
    <string name="row_remove_text">Tap to remove</string>
    <string name='fragment_title'>Title</string>
    <string name='fragment_description'>Description</string>
    <string name='fragment_link'>Link</string>
    <string name='fragment_date'>Pub Date</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="clear_text">Clear</string>
    <string name="help_text">Press and hold an RSS feed to add or remove it from favorites</string>
    <string name="confirm_help">Okay!</string>
    <string name="confirm">Yes</string>
    <string name="deny">No</string>
    <string name="item_added">Item added to saved items.</string>
    <string name="item_removed">Item removed.</string>
    <string name="undo">Undo</string>
    <string name="article_save">Save this article?</string>
    <string name="article_delete">Delete this article?</string>
    <string name="row_id">Row ID: </string>
    <string name="database_id">Database ID: </string>
    <string name="home_text">Home</string>
    <string name="favorite_text">Saved Items</string>
    <string name="help_text_2">Help</string>
    <string name="email_textView">Email:</string>
    <string name="email_editText">Enter Email Address…</string>
    <string name="password_textView">Password:</string>
    <string name="login_textView">Login</string>
    <string name="app_details1">CST2335 - December 2021"</string>
    <string name="app_version">Version 1.0</string>
    <string name="link_below">See Link Below:</string>
    <string name="hide_button">Hide</string>
</resources>