<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ui_home_button"
        android:orderInCategory="1"
        android:title="@string/home_text"
        app:showAsAction="always" />

    <item
        android:id="@+id/rss"
        android:icon="@drawable/ui_rss_button"
        android:orderInCategory="2"
        android:title="RSS"
        app:showAsAction="always" />

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ui_fav_button"
        android:orderInCategory="3"
        android:title="@string/favorite_text"
        app:showAsAction="always" />

    <item
        android:id="@+id/help"
        android:title="@string/help_text_2"
        app:showAsAction="never" />
</menu>