<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginTop="30dp">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/grey2"
        android:clipToPadding="false"
        android:elevation="5dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:stateListAnimator="@null">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@color/grey"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/grey3"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titleTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:shadowColor="@color/grey"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="By Kaitlyn Gatineau &amp; Trevor Carson"
            android:textAlignment="center"
            android:textColor="@color/grey3"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rss_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="70dp"
        android:paddingEnd="20dp"
        android:paddingBottom="30dp">

        <Button
            android:id="@+id/openFeedButton"
            android:layout_width="160dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/grey3"
            android:drawableEnd="@drawable/rss"
            android:elevation="5dp"
            android:onClick="launchRSSFeed"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:stateListAnimator="@null"

            android:text="@string/view_feed_text"
            android:textColor="@color/white"

            />

        <Button
            android:id="@+id/viewSavedButton"
            android:layout_width="160dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey3"
            android:drawableEnd="@drawable/bookmark"
            android:elevation="5dp"
            android:onClick="launchSavedItems"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:stateListAnimator="@null"
            android:text="@string/favorite_text"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>